<?xml version="1.0"?>
<package format="2">
  <name>choreonoid_ros_tutorial</name>
  <version>1.0.0</version>
  <description>
    Tutorial on how to implement a robot controller with I/O using ROS
  </description>
  <maintainer email="naya728@todo.todo">naya728</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- 既存の依存に加えて… -->
  <depend>geometry_msgs</depend>       <!-- ← 追加 -->
  <depend>tf2</depend>                 <!-- ← 追加 -->
  <depend>tf2_geometry_msgs</depend>   <!-- ← 追加 -->

  <!-- もともとの依存 -->
  <depend>choreonoid</depend>
  <depend>choreonoid_ros</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>

  <exec_depend>teleop_twist_keyboard</exec_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
